--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "4.*|5.*|6.*",
+        "guzzlehttp/guzzle": "5.*",
         "fabpot/goutte": "~2.0"
     },
     "require-dev": {
