--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "5.*",
-        "fabpot/goutte": "~2.0"
+        "guzzlehttp/guzzle": "5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
